# SYNQ

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHAOS_TEST.md  DEPLOY.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  start.cmd  start.ps1  stop.cmd  stop.ps1
.github/workflows/: ci.yml  keepalive.yml
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  celerybeat-schedule  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_phase3_files.py  0003_phase5_usage_events.py
apps/api/app/: auth.py  config.py  context_engine.py  context_resolver.py  db.py  embeddings.py  llm.py  main.py  models.py  orchestrator.py  orm.py  ratelimit.py  storage.py  vector_store.py
apps/api/app/adapters/: __init__.py  _gemini_files.py  _openai_compat.py  _resolve.py  base.py  gemini_adapter.py  groq_adapter.py  mistral_adapter.py
apps/api/app/core/: __init__.py  flags.py  logging.py  middleware.py  tracing.py
apps/api/app/router/: __init__.py  circuit_breaker.py  fallback.py  health_probes.py  provider_router.py
apps/api/app/routers/: conversations.py  dashboard.py  files.py  flags.py  webhooks.py
apps/api/app/tools/: chaos_test.py  replay.py  synthetic_fixture.py
apps/api/app/workers/: __init__.py  celery_app.py  cost_meter.py  db_sync.py  description.py  dispatch.py  intelligence.py  tasks.py
apps/api/tests/: test_file_chunking.py  test_file_resolve.py  test_storage_helpers.py
apps/web/: .env.example  .env.production.example  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: layout.tsx  page.tsx
apps/web/app/chat/[id]/: page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/components/: chat-window.tsx  conversation-sidebar.tsx  observability-boot.tsx  synq-logo.tsx
apps/web/components/dashboard/: daily-cost-chart.tsx  fallbacks-table.tsx  flags-panel.tsx  provider-donut.tsx  provider-status.tsx  stat-row.tsx  tokens-chart.tsx
apps/web/components/ui/: card.tsx
apps/web/lib/: api.ts  logger.ts  store.ts  tracing.ts
scripts/: check-idempotency.sh
