[project]
name = "synq-api"
version = "0.1.0"
description = "SYNQ API — Cross-agent continuity backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.3",
    "litellm>=1.51.0",
    "redis>=5.1.0",
    "sse-starlette>=2.1.3",
    "pyjwt[crypto]>=2.9.0",
    "httpx>=0.27.2",
    "svix>=1.34.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
    "celery[redis]>=5.4.0",
    "pdfplumber>=0.11.4",
    "python-docx>=1.1.2",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
    "google-genai>=0.3.0",
    "qdrant-client>=1.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
